added a tracker for task IDs